<resources>


    <string name="app_name">Erdem Kahraman</string>
    <string name="logo_name">Erdem Kahraman</string>
    <string name="slogan_name">Hayat Onları Sevince Güzel!</string>
    <string name="powered_name">Powered By Erdem Kahraman</string>

    <string name="products">Products</string>
    <string name="animal">Animal</string>
    <string name="maps">Map</string>
    <string name="pets">Pet Shop</string>
    <string name="vet">Veterinary</string>
    <string name="home">Home</string>
    <string name="categories">All Categories</string>
    <string name="missing">Add Missing Place</string>
    <string name="Login">Logın</string>
    <string name="profile">Profile</string>
    <string name="Logout">Log Out</string>

    <string name="date">A thin wrapper around a millisecond value that allows JDBC to identify this as an SQL DATE
        value. A milliseconds value represents the number of milliseconds that have passed since January 1, 1970 00:00:00.000 GMT.
        To conform with the definition of SQL DATE, the millisecond values wrapped by a java.sql.Date instance
        must be normalized by setting the hours, minutes, seconds, and milliseconds to zero in the particular time zone with which the instance is associated.
        </string>
    <string name="rating">A RatingBar is an extension of SeekBar and ProgressBar that shows a rating in stars.
        The user can touch/drag or use arrow keys to set the rating when using the default size RatingBar.
        The smaller RatingBar style ( R.attr.ratingBarStyleSmall) and the larger indicator-only style
        (R.attr.ratingBarStyleIndicator) do not support user interaction and should only be used as indicators.
        When using a RatingBar that supports user interaction, placing widgets to the left or right of the
        RatingBar is discouraged.</string>
    <string name="edit">A TextView displays text to the user and optionally allows them to edit it.
        A TextView is a complete text editor, however the basic class is configured to not allow editing.
        </string>
    <string name="camera">The Android framework includes support for various cameras and camera features
        available on devices, allowing you to capture pictures and videos in your applications.
        This document discusses a quick, simple approach to image and video capture and outlines an advanced
        approach for creating custom camera experiences for your users.</string>
    <string name="recyclerview">RecyclerView is the ViewGroup that contains the views corresponding to your data.
        Its a view itself so you add RecyclerView into your layout the way you would add any other UI element.
        Each individual element in the list is defined by a view holder object.
        RecyclerView is a ViewGroup added to the android studio as a successor of the GridView and ListView.
        It is an improvement on both of them and can be found in the latest v-7 support packages.
        It has been created to make possible construction of any lists with XML layouts as an item
        which can be customized vastly while improving on the efficiency of ListViews and GridViews.
    </string>
    <string name="API_KEY">AIzaSyDxJfgGvI43DwvkHA2kiea8ZEsu1x7FBUg</string>
    <string name="Action_Settings">Settings</string>
    <string name="login_string">Already have an account? <b>Login here</b></string>

    <string name="open_navigation_drawer">Open Drawer</string>
    <string name="close_navigation_drawer">Open Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="featured_locations">Size ve değer verdiğiniz canlılara değer veriyoruz</string>
    <string name="featured_locations_description">Dostlarınızın Dostları</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories2">c</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verification">Verification</string>
    <string name="make_selection">Make Selectıon</string>
    <string name="make_selection_detail">Select which contact detail should we use to reset your password?</string>
    <string name="otp_pass">Enter one tıme password sent</string>
    <string name="forget_password_detail">Provıde your account s emaıl for whıch you want to reset your password</string>


    <string name="sign_up">Sıgn Up</string>
    <string name="next_btn">Next</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_username2">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_password">Password</string>
    <string name="retailer_heading">Grow\nYour Business</string>
    <string name="retailer_tag_line">We will help you to grow your business using online services!</string>
    <string name="create_account">Create\nAccount</string>
    <string name="how_we_work">How we work?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps_erdem">MapsActivityErdem</string>

</resources>